public/css/dashboard.css
 html { 
  background: url(/images/trees_lake.jpg) no-repeat center center fixed; 
  background-color: rgba(255,255,255,0.7);
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}


body {
	background-color:rgba(44,53,57,0);
	overflow-x: hidden; 
	overflow-y: scroll;

}

.navbar {
	border-radius: 0px;
}
.btn {
	border-radius: 0px;
}

.main_section {
	background-color: rgba(255,255,255, 0.7);
	position: relative;
	top: -20px;
	padding: 10px;
	width: 75%;
	box-shadow: 10px;
	margin: 0 auto;
	-webkit-box-shadow: 0px 8px 25px -3px rgba(0,0,0,0.75);
	-moz-box-shadow: 0px 8px 25px -3px rgba(0,0,0,0.75);
	box-shadow: 0px 8px 25px -3px rgba(0,0,0,0.75);
}

#description_holder {
	display: inline-block;
	position: fixed;
	top: 40%;
	left: 40%;
	width: 400px;
}

/*.description-hover {
	transition: opacity 1s;
	-webkit-transition: opacity 1s;
	
	position: absolute;
	top: 0px;
	left: 50%;

	z-index: 1;
}

.description:not(:hover) + .description-hover {
	opacity: 0;
	visibility: hidden;
}*/

.description-hoverbox {
	z-index: 1;

	position: absolute;
	top: 50px;

	max-width: 400px;

	visibility: hidden;
	padding: 10px;
}

.description {
	cursor: help;
}

.description:hover + .description-hoverbox {
	visibility: visible;
}

.relative {
	position: relative;
}

.settings {
	position: relative;
}

form > button {
	margin-top: 5px;
}

